[package]
name = "practical_cryptography_for_developers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
hmac = "0.12.1"
ring = "0.17.8"
ripemd = "0.1.3"
sha2 = "0.10.8"
sha3 = "0.10.8"
whirlpool = "0.10.4"
